## Process this file with automake to produce Makefile.in

SUBDIRS = nfs rpcsvc sys

noinst_HEADERS = \
	cld.h \
	conffile.h \
	exportfs.h \
	ha-callout.h \
	junction.h \
	lockd_netlink.h \
	misc.h \
	nfs_mntent.h \
	nfs_paths.h \
	nfsd_netlink.h \
	nfsd_path.h \
	nfslib.h \
	nfsrpc.h \
	nls.h \
	nsm.h \
	pseudoflavors.h \
	rpcmisc.h \
	sockaddr.h \
	tcpwrapper.h \
	v4root.h \
	workqueue.h \
	xio.h \
	xlog.h \
	xmalloc.h \
	xcommon.h \
	xstat.h

MAINTAINERCLEANFILES = Makefile.in
